crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@argument_map.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/argument_map.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    3 [ label = "ExpressionStatement" ]
    4 [ label = "" ]
    1 -> 0 [ label = Error(Implicit) ]
    3 -> 2 [ label = Error(Implicit) ]
    1 -> 3 [ label = NewFunction ]
    4 -> 0 [ label = Error(Implicit) ]
    1 -> 4 [ label = Normal ]
}
