crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@arrow_expressions.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/arrow_expressions.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "ExpressionStatement\nVariableDeclaration" ]
    2 [ label = "" ]
    3 [ label = "ExpressionStatement" ]
    4 [ label = "" ]
    5 [ label = "ExpressionStatement" ]
    1 -> 0 [ label = Error(Implicit) ]
    3 -> 2 [ label = Error(Implicit) ]
    1 -> 3 [ label = NewFunction ]
    5 -> 4 [ label = Error(Implicit) ]
    1 -> 5 [ label = NewFunction ]
}
