crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@break_from_a_label_in_global_scope.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/break_from_a_label_in_global_scope.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "LabeledStatement\nbreak <A>" ]
    2 [ label = "unreachable" ]
    3 [ label = "" ]
    1 -> 0 [ label = Error(Implicit) ]
    2 -> 0 [ label = Error(Implicit) ]
    1 -> 2 [ label = Unreachable , style = "dotted" ]
    3 -> 0 [ label = Error(Implicit) ]
    2 -> 3 [ label = Normal ]
    1 -> 3 [ label = Jump ]
}
