crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@class_extend_super.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/class_extend_super.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$return = <value>"]
    2 [ label = ""]
    3 [ label = "Unreachable()"]
    4 [ label = ""]
    0 -> 1 [ ]
    2 -> 3 [ ]
    0 -> 4 [ ]
}
