crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@cond_expr_in_arrow_fn.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/cond_expr_in_arrow_fn.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "VariableDeclaration" ]
    2 [ label = "" ]
    3 [ label = "ExpressionStatement\nCondition(CallExpression)" ]
    4 [ label = "" ]
    5 [ label = "" ]
    6 [ label = "" ]
    1 -> 0 [ label = "Error(Implicit)" ]
    3 -> 2 [ label = "Error(Implicit)" ]
    1 -> 3 [ label = "NewFunction" ]
    4 -> 2 [ label = "Error(Implicit)" ]
    5 -> 2 [ label = "Error(Implicit)" ]
    6 -> 2 [ label = "Error(Implicit)" ]
    4 -> 6 [ label = "Normal" ]
    3 -> 4 [ label = "Jump" ]
    3 -> 5 [ label = "Normal" ]
    5 -> 6 [ label = "Normal" ]
}
