crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@conditional_expression.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/conditional_expression.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "VariableDeclaration" ]
    2 [ label = "" ]
    3 [ label = "" ]
    4 [ label = "VariableDeclaration" ]
    1 -> 0 [ label = Error(Implicit) ]
    2 -> 0 [ label = Error(Implicit) ]
    3 -> 0 [ label = Error(Implicit) ]
    4 -> 0 [ label = Error(Implicit) ]
    2 -> 4 [ label = Normal ]
    1 -> 2 [ label = Normal ]
    1 -> 3 [ label = Normal ]
    3 -> 4 [ label = Normal ]
}
