crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@for_in.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/for_in.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    3 [ label = "ForStatement\nVariableDeclaration" ]
    4 [ label = "" ]
    5 [ label = "" ]
    6 [ label = "ExpressionStatement" ]
    7 [ label = "ExpressionStatement" ]
    8 [ label = "" ]
    1 -> 0 [ label = "Error(Implicit)" ]
    3 -> 2 [ label = "Error(Implicit)" ]
    1 -> 3 [ label = "NewFunction" ]
    4 -> 2 [ label = "Error(Implicit)" ]
    5 -> 2 [ label = "Error(Implicit)" ]
    6 -> 2 [ label = "Error(Implicit)" ]
    7 -> 2 [ label = "Error(Implicit)" ]
    3 -> 4 [ label = "Normal" ]
    4 -> 6 [ label = "Jump" ]
    6 -> 5 [ label = "Backedge" ]
    5 -> 4 [ label = "Backedge" ]
    4 -> 7 [ label = "Normal" ]
    8 -> 0 [ label = "Error(Implicit)" ]
    1 -> 8 [ label = "Normal" ]
}
